carousel.css
.nav-bar-mobile {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 90px;

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: rgba(241, 201, 83, 1);

  @media screen and (min-width: 620px) {
    display: none;
    
  } 
  }

  .nav-bar-items {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    list-style: none;

    img {
      height: 40px;
      width: 40px;
    }
  }

